--- a/CATNet/experiments/CAT_full.yaml
+++ b/CATNet/experiments/CAT_full.yaml
@@ -1,8 +1,8 @@
-CUDNN:
-  BENCHMARK: true
-  DETERMINISTIC: false
-  ENABLED: true
-GPUS: (3,)
+#CUDNN:
+#  BENCHMARK: true
+#  DETERMINISTIC: false
+#  ENABLED: true
+GPUS: (1,2,3,4)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
 WORKERS: 10
