20221102 LAMA ZITS supported

--- a/options/train/ISP/train_ISP_detector_finetune.yml
+++ b/options/train/ISP/train_ISP_detector_finetune.yml
@@ -1,4 +1,6 @@
 #### model path dirs
+finetune_detector_name: resfcn
+
 ISP_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
 protection_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
 detector_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
@@ -6,11 +8,11 @@ MVSS_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
 OSN_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
 
 # restormer: 77999
-load_discriminator_models: 22999 #11499
-load_RAW_models: 22999 #11499 # 10999
+load_discriminator_models: 0 #11499
+load_RAW_models: 0 #11499 # 10999
 load_ISP_models: 43999 #20999 # new: 24999
-load_MVSS_models: 22999
-load_OSN_models: 22999
+load_MVSS_models: 0
+load_OSN_models: 0
 load_customized_models: 0
 
 #### general settings
@@ -20,10 +22,8 @@ use_tb_logger: true
 model: ISP # CVPR
 distortion: sr
 scale: 4
-gpu_ids: [1,2]
+gpu_ids: [3]
 
-skip_attack_probability: 0.85
-skip_aug_probability: 0.85
 
 restart_step: 1000
 
@@ -58,7 +58,7 @@ datasets:
 #    dataroot_GT: /groupshare//Places/data_256                                        # Places
 #    dataroot_GT: /groupshare/CelebA/img/img_celeba_200                                          # CelebA
 #    dataroot_GT: /groupshare/paris_street_view/paris_train                            # ParisStreetView
-    dataroot_GT: /groupshare/ISP_results/xxhu_test/UNet/FORGERY_0                                   # COCO
+    dataroot_GT: /groupshare/COCOdataset/train2017                                   # COCO
 #    dataroot_GT: /groupshare//Flickr1024/train                                 # Flicker
 #    dataroot_GT: /groupshare//DIV2K_valid                                # DIV2K
 #    dataroot_GT: /groupshare//VOC2012/JPEGImages
@@ -67,7 +67,7 @@ datasets:
     dataroot_LQ: /groupshare/ISP_results/xxhu_test/UNet/MASK
 
     use_shuffle: true
-    n_workers: 2 # per GPU
+    n_workers: 1 # per GPU
 
     batch_size: 4 # 4
     GT_size: 512 # 608
@@ -79,9 +79,9 @@ datasets:
   val:
     name: val_DIV2K
     mode: LQGT
-    dataroot_GT: /groupshare/ISP_results/xxhu_test/UNet/FORGERY_0
+    dataroot_GT: /groupshare/COCOdataset/test2017
     dataroot_LQ: /groupshare/ISP_results/xxhu_test/UNet/MASK # path to validation reference LR images, not necessary, if not provided, LR images will be generated in dataloader
-
+    GT_size: 512 # 608
 #### training settings: learning rate scheme, loss
 
 train:
