--- a/options/train/attack_layer_setting/ISP_attack_layer.yml
+++ b/options/train/attack_layer_setting/ISP_attack_layer.yml
@@ -1,8 +1,8 @@
-### 已经使用过的indice： 6 7 8 9 10 11
+### 已经使用过的indice： 5 7 8 9 10 11
 skip_attack_probability: 0.85
 skip_aug_probability: 0.85
 
-#### distortion: total 8
+#### distortion-level 0: total 8
 simulated_resize_indices: [0,5]
 simulated_gblur_indices: [1]
 simulated_mblur_indices: [2]
@@ -10,29 +10,30 @@ simulated_AWGN_indices: [4]
 simulated_strong_JPEG_indices: [3,6]
 simulated_weak_JPEG_indices: [7]
 
-#### contrast: total 7
+#### contrast-level 0: total 7
 simulated_hue: [0]
 simulated_contrast: [1,4]
 simulated_saturation: [2,5]
 simulated_brightness: [3,6]
 
-#### manipulation: total 9
+#### manipulation-level 0: total 9
 simulated_splicing_indices: [3, 6, 8]
 simulated_copymove_indices: [0, 2, 5]
 simulated_inpainting_indices: [1, 4, 7]
 simulated_copysplicing_indices: []
 
-#### inpainting: total 6
-zits_as_inpainting: [0,3]
+#### inpainting-level 1 (subject to manipulation): total 5
+zits_as_inpainting: [0]
 edgeconnect_as_inpainting: [1,4]
-lama_as_inpainting: [2,5]
+lama_as_inpainting: [2]
+ideal_as_inpainting: [3]
 
-#### detector: total 11
+#### detector-level 0: total 11
 detector_using_MPF_indices: [2,5,8]
 detector_using_MVSS_indices: [0,3,6,9]
 detector_using_OSN_indices: [1,4,7,10]
 
-#### crop: total 10
+#### crop-level 0: total 10
 crop_indices: [3,5,7,9]
 
 minimum_PSNR_caused_by_attack: 25
