--- a/options/train/ISP/train_ISP_ablation_on_RAW.yml
+++ b/options/train/ISP/train_ISP_ablation_on_RAW.yml
@@ -1,43 +1,20 @@
+#### model path dirs
+ISP_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
+protection_folder: /groupshare/ISP_results/complete_results/model/ablation_on_RAW/
+detector_folder: /groupshare/ISP_results/complete_results/model/ablation_on_RAW/
+MVSS_folder: /groupshare/ISP_results/complete_results/model/ablation_on_RAW/
+OSN_folder: /groupshare/ISP_results/complete_results/model/ablation_on_RAW/
 
 #### general settings
 
-name: /groupshare/ISP_results
-use_tb_logger: true
-model: ISP # CVPR
-distortion: sr
-scale: 4
-step_acumulate: 1
-train_isp_networks: false
-train_full_pipeline: true
-use_gamma_correction: false
-conduct_cropping: false
-consider_robost: true
-include_isp_inference: true
-conduct_augmentation: true
-train_inpainting_surrogate_model: false
+CE_hyper_param: 0.05
 
-psnr_thresh: 38
-CE_hyper_param: 0.015
-ssim_hyper_param: 0.01
-perceptual_hyper_param: 0.01
-RAW_L1_hyper_param: 4
-L1_hyper_param: 1
-style_hyper_param: 1
-raw_classes: 5
-dtcwt_layers: 16
-model_save_period: 2000
+gpu_ids: [3]
 
-load_discriminator_models: 1999
-load_RAW_models: 1999 # 13999
-load_ISP_models: 20999
-#### datasets
-phase: train
-only_gen_immunized: 0.0
-eval_dataset: COCO
-eval_kind: inpainting
-eval_attack: NOATK
-dataset_name: Rerun
-#phase: test
+load_discriminator_models: 4999
+load_RAW_models: 4999 # 13999
+load_ISP_models: 43999
+
 
 datasets:
   train:
@@ -56,16 +33,11 @@ datasets:
     dataroot_LQ: ~
 
     use_shuffle: true
-    n_workers: 2 # per GPU
-    ######## CVPR #########
-#    batch_size: 2   # 4
-#    GT_size: 256
-    ######## Imuge #########
-    batch_size: 6 # 4
+    n_workers: 1 # per GPU
+
+    batch_size: 2 # 4
     GT_size: 512 # 608
-    #########################
-    use_flip: true
-    use_rot: true
+
     color: RGB
 
   val:
@@ -75,72 +47,10 @@ datasets:
     dataroot_LQ: ~ # path to validation reference LR images, not necessary, if not provided, LR images will be generated in dataloader
     GT_size: 512 # 608
 
-#### training settings: learning rate scheme, loss
 
+#### training settings: learning rate scheme, loss
 train:
-  using_self_defined_dataset: 0.0
-  new_task: 1.0  # 0:imuge 1:outward imuge
-  task_name: ImugeV2 # ImugeV2 # CropLocalize # RHI3
-  debug_mode: 0
-  save_to_latest: 1.0
-  load: 0.0
-  lr_scratch: !!float 1e-4   # 2e-5
-  lr_finetune: !!float 1e-4
+  lr_scratch: !!float 1e-4
+  lr_finetune: !!float 2e-5
   beta1: 0.9 #0.9
   beta2: 0.999 #0.999
-  niter: 500000 # not necessary
-  warmup_iter: -1  # no warm up
-
-  lr_scheme: MultiStepLR
-  lr_steps: [20000, 40000, 60000, 80000 ,100000,120000,140000,160000,180000,200000]
-  lr_gamma: 0.5
-
-  pixel_criterion_forw: l2
-  pixel_criterion_back: l1
-
-  manual_seed: 12
-
-  val_freq: !!float 5e3
-
-  lambda_fit_forw: 16.
-  lambda_rec_back: 1
-  lambda_ce_forw: 1
-  weight_decay_G: !!float 1e-5
-  gradient_clipping: 10
-
-  current_step: 0
-
-
-#### network structures
-
-network_G:
-  which_model_G:
-      subnet_type: DBNet
-  in_nc: 3
-  out_nc: 3
-  block_num: [6, 6]
-  scale: 4
-  init: xavier
-
-#### path
-
-path:
-#  pretrain_model: ../experiments/pretrained_RHI3_fine_models/12100        # RHI3
-#  pretrain_model: ../experiments/pretrained_crop_fine_models/32100        # Crop
-#  pretrain_model: ../experiments/pretrained_models/fine_models/COCO/22100  # Imuge++ 2100
-#  pretrain_model: ../experiments/pretrained_models/fine_models/CelebA/2100  # Imuge++ 2100
-#  pretrain_model: ../experiments/pretrained_models/230100
-#  pretrain_model: ../experiments/pretrained_models/64100
-  ######## Imuge #########
-  pretrain_model: /qichaoying/Downloads/Invertible-Image-Rescaling-master/experiments/pretrained_models/fine_models/COCO/22100
-  #########################
-  strict_load: true
-  resume_state: ~
-
-
-
-#### logger
-
-logger:
-  print_freq: 100
-  save_checkpoint_freq: !!float 5e3
