--- a/options/train/attack_layer_setting/ISP_attack_layer.yml
+++ b/options/train/attack_layer_setting/ISP_attack_layer.yml
@@ -1,20 +1,21 @@
 ### 已经使用过的indice： 5 7 8 9 10 11
-skip_attack_probability: 0.85
-skip_aug_probability: 0.85
+skip_attack_probability: 1.0
+skip_aug_probability: 1.0
 
 #### distortion-level 0: total 8
 simulated_resize_indices: [0,5]
 simulated_gblur_indices: [1]
 simulated_mblur_indices: [2]
 simulated_AWGN_indices: [4]
-simulated_strong_JPEG_indices: [3,6]
-simulated_weak_JPEG_indices: [7]
+simulated_strong_JPEG_indices: [3,6,7]
+simulated_weak_JPEG_indices: []
 
 #### contrast-level 0: total 7
 simulated_hue: [0]
 simulated_contrast: [1,4]
 simulated_saturation: [2,5]
 simulated_brightness: [3,6]
+simulated_gamma: []
 
 #### manipulation-level 0: total 9
 simulated_splicing_indices: [3, 6, 8]
@@ -34,11 +35,10 @@ detector_using_MVSS_indices: [0,3,6,9]
 detector_using_OSN_indices: [1,4,7,10]
 
 #### crop-level 0: total 10
-crop_indices: [3,5,7,9]
+crop_indices: [1,3,5,7,9]
 
 minimum_PSNR_caused_by_attack: 24
 
-step_acumulate: 1
 use_gamma_correction: false
 conduct_cropping: true
 consider_robost: true
@@ -48,18 +48,18 @@ train_inpainting_surrogate_model: false
 lower_false_positive: false
 
 psnr_thresh: 42
-CE_hyper_param: 0.1
-ssim_hyper_param: 0.01
-perceptual_hyper_param: 0.01
-RAW_L1_hyper_param: 2
+CE_hyper_param: 0.005
+ssim_hyper_param: 0 #0.01
+perceptual_hyper_param: 0.001
+RAW_L1_hyper_param: 10
 L1_hyper_param: 1
-style_hyper_param: 5
+style_hyper_param: 1
 dtcwt_layers: 16
 model_save_period: 1000
 
 
-weak_JPEG_lower_bound: 18
-strong_JPEG_upper_bound: 19
+weak_JPEG_lower_bound: 20
+strong_JPEG_upper_bound: 21
 strong_JPEG_lower_bound: 10
 cropping_lower_bound: 0.7
 
