--- a/options/train/ISP/train_ISP_test.yml
+++ b/options/train/ISP/train_ISP_test.yml
@@ -1,7 +1,7 @@
 
-gpu_ids: [4, ]
-load_discriminator_models: 18999
-load_RAW_models: 18999 # 13999
+gpu_ids: [1, ]
+load_discriminator_models: 11999
+load_RAW_models: 11999 # 13999
 load_ISP_models: 43999
 #load_MVSS_models: 8999
 #load_OSN_models: 8999
@@ -29,19 +29,20 @@ protection_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic
 #detector_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
 #MVSS_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
 #OSN_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
-#detector_folder: /groupshare/ISP_results/complete_results/model/finished_MVSS/
+detector_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
 localizer_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
 # MVSS_origin_localizer or MVSS_finetuned_localizer
-using_which_model_for_test: discriminator_mask #OSN_finetuned_localizer #OSN_localizer #Resfcn_localizer #discriminator_mask #CAT_localizer # note: restormer cannot be loaded simultaneously with OSN network, because they share the same variable
+using_which_model_for_test: CAT #OSN_finetuned_localizer #OSN_localizer #Resfcn_localizer #discriminator_mask #CAT_localizer # note: restormer cannot be loaded simultaneously with OSN network, because they share the same variable
 ### these variables are the most important, make sure dont mess them up
 which_model_for_detector: discriminator_mask
+using_which_dataset_for_test: FiveK_Canon
 
 #### test settings
 inference_benign_attack_begin_idx: 0
 inference_load_real_world_tamper: false # true代表splicing
 inference_do_subsequent_prediction: false
 inference_tamper_index: 1 # 2代表cmf 1代表inpainting
-inference_save_image: true
+inference_save_image: false
 
 restart_step: 200000
 
