--- a/options/train/attack_layer_setting/ISP_attack_layer.yml
+++ b/options/train/attack_layer_setting/ISP_attack_layer.yml
@@ -24,10 +24,10 @@ simulated_inpainting_indices: [1, 4, 7]
 simulated_copysplicing_indices: []
 
 #### inpainting-level 1 (subject to manipulation): total 5
-zits_as_inpainting: [0,3]
+zits_as_inpainting: [0,1,3]
 edgeconnect_as_inpainting: []
 lama_as_inpainting: [2,4]
-ideal_as_inpainting: [1]
+ideal_as_inpainting: []
 
 #### detector-level 0: total 11
 detector_using_MPF_indices: [2,5,8]
@@ -37,18 +37,16 @@ detector_using_OSN_indices: [1,4,7,10]
 #### crop-level 0: total 10
 crop_indices: [1,3,5,7,9]
 
-minimum_PSNR_caused_by_attack: 24
+minimum_PSNR_caused_by_attack: 20
 
 use_gamma_correction: false
 conduct_cropping: true
 consider_robost: true
 include_isp_inference: true
 conduct_augmentation: true
-train_inpainting_surrogate_model: false
-lower_false_positive: false
 
-psnr_thresh: 42
-CE_hyper_param: 0.005
+psnr_thresh: 44
+CE_hyper_param: 0.02
 ssim_hyper_param: 0 #0.01
 perceptual_hyper_param: 0.001
 RAW_L1_hyper_param: 10
@@ -59,7 +57,7 @@ model_save_period: 1000
 
 
 weak_JPEG_lower_bound: 20
-strong_JPEG_upper_bound: 21
+strong_JPEG_upper_bound: 19
 strong_JPEG_lower_bound: 10
 cropping_lower_bound: 0.7
 
