20221105 finetune on CANON

--- a/options/train/ISP/train_ISP_detector_finetune.yml
+++ b/options/train/ISP/train_ISP_detector_finetune.yml
@@ -1,4 +1,9 @@
 #### model path dirs
+
+## OSN finetune: 16999
+## MVSS finetune: 22999
+## resfcn finetune: 27999
+
 finetune_detector_name: Resfcn
 
 #ISP_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
