--- a/options/train/ISP/train_ISP_base.yml
+++ b/options/train/ISP/train_ISP_base.yml
@@ -5,6 +5,9 @@
 
 #### general settings
 
+using_which_dataset_for_training: Canon_FiveK # RAISE
+using_which_dataset_for_test: Canon_FiveK
+
 train_isp_networks: false
 train_full_pipeline: true
 train_RAW2RAW: true
