--- a/options/train/ISP/train_ISP_detector_finetune.yml
+++ b/options/train/ISP/train_ISP_detector_finetune.yml
@@ -7,11 +7,16 @@
 finetune_detector_name: OSN
 consider_robost: false
 conduct_augmentation: false
-model_save_period: 500
+model_save_period: 200
 
 #ISP_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
 #protection_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
 detector_folder: /groupshare/ISP_results/complete_results/model/OSN_finetune_no_protection_no_attack/
+
+simulated_splicing_indices: [2, 3, 6, 8]
+simulated_copymove_indices: [0, 5]
+simulated_inpainting_indices: [1, 4, 7]
+simulated_copysplicing_indices: []
 
 
 # restormer: 77999
@@ -19,7 +24,7 @@ load_discriminator_models: 0
 
 #### general settings
 
-gpu_ids: [1]
+gpu_ids: [3]
 
 
 
