--- a/options/train/ISP/train_ISP_test.yml
+++ b/options/train/ISP/train_ISP_test.yml
@@ -1,20 +1,19 @@
-
-gpu_ids: [2, ]
-load_discriminator_models: 11999
-load_RAW_models: 11999 # 13999
-load_ISP_models: 84999 #43999
+gpu_ids: [1, ]
+load_discriminator_models: 499
+load_RAW_models: 499 # 13999
+load_ISP_models: 16999 #43999
 #load_MVSS_models: 8999
 #load_OSN_models: 8999
-load_localizer_models: 11999
+load_localizer_models: 499
 
 task_name_discriminator_model: my_own_elastic # my_own_elastic or ablation_on_RAW
 task_name_KD_JPEG_model: my_own_elastic
 task_name_customized_model: ISP_alone
-task_name_ISP_model: my_own_elastic
+task_name_ISP_model: my_own_elastic #my_own_elastic
 
-activate_OSN: false
+activate_OSN: true
 test_baseline: false
-test_restormer: 2 # 1代表addISP 2是restormer 0是MixISP简单版 3代表mixisp训练版 4代表传统isp单独版
+test_restormer: 0 # 1代表addISP 2是restormer 0是MixISP简单版 3代表mixisp训练版 4代表传统isp单独版
 
 ## inpainting model
 # Hint:
@@ -24,25 +23,25 @@ test_restormer: 2 # 1代表addISP 2是restormer 0是MixISP简单版 3代表mixis
 which_model_for_inpainting: 0
 
 #### model path dirs
-ISP_folder: /groupshare/ISP_results/complete_results/model/restormer_ISP_finish/ # or finished_MVSS. Don't forget the last /!
-protection_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
+ISP_folder: /groupshare/ISP_results/complete_results/model/ISP_CANON/ # or finished_MVSS. Don't forget the last /!
+protection_folder: /groupshare/ISP_results/complete_results/model/OSN/
 #detector_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
 #MVSS_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
 #OSN_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
-detector_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
-localizer_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
+detector_folder: /groupshare/ISP_results/complete_results/model/OSN/
+localizer_folder: /groupshare/ISP_results/complete_results/model/OSN/
 # MVSS_origin_localizer or MVSS_finetuned_localizer
-using_which_model_for_test: CAT #OSN_finetuned_localizer #OSN_localizer #Resfcn_localizer #discriminator_mask #CAT_localizer # note: restormer cannot be loaded simultaneously with OSN network, because they share the same variable
+using_which_model_for_test: OSN_localizer #OSN_finetuned_localizer #OSN_localizer #Resfcn_localizer #discriminator_mask #CAT_localizer # note: restormer cannot be loaded simultaneously with OSN network, because they share the same variable
 ### these variables are the most important, make sure dont mess them up
-which_model_for_detector: discriminator_mask
-using_which_dataset_for_test: Raise
+which_model_for_detector: discriminator_mask # using self.discriminator or using self.localizer
+using_which_dataset_for_test: FiveK_Canon
 
 #### test settings
 inference_benign_attack_begin_idx: 0
 inference_load_real_world_tamper: false # true代表splicing
 inference_do_subsequent_prediction: false
-inference_tamper_index: 1 # 2代表cmf 1代表inpainting
-inference_save_image: false
+inference_tamper_index: 2 # 2代表cmf 1代表inpainting
+inference_save_image: true
 
 restart_step: 200000
 
@@ -55,13 +54,14 @@ datasets:
 #    dataroot_GT: /groupshare//Places/data_256                                        # Places
 #    dataroot_GT: /groupshare/CelebA/img/img_celeba_200                                          # CelebA
 #    dataroot_GT: /groupshare/paris_street_view/paris_train                            # ParisStreetView
-    dataroot_GT: /groupshare/ISP_results/xxhu_test/UNet/FORGERY_0                                   # COCO
+    dataroot_GT: /groupshare/ISP_results/complete_results/hand_forged_images/forged                                # COCO
 #    dataroot_GT: /groupshare//Flickr1024/train                                 # Flicker
 #    dataroot_GT: /groupshare//DIV2K_valid                                # DIV2K
 #    dataroot_GT: /groupshare//VOC2012/JPEGImages
 #    dataroot_GT: /groupshare//UCID_color/images                                                 # UCID
 #    dataroot_GT: /groupshare//ILSVRC2012_img_val                                      # ImageNet
-    dataroot_LQ: /groupshare/ISP_results/xxhu_test/UNet/MASK
+    dataroot_LQ: /groupshare/ISP_results/complete_results/hand_forged_images/mask
+
 
     use_shuffle: true
     n_workers: 1 # per GPU
@@ -74,8 +74,9 @@ datasets:
   val:
     name: val_DIV2K
     mode: LQGT
-    dataroot_GT: /groupshare/ISP_results/xxhu_test/UNet/FORGERY_0
-    dataroot_LQ: /groupshare/ISP_results/xxhu_test/UNet/MASK # path to validation reference LR images, not necessary, if not provided, LR images will be generated in dataloader
+    dataroot_GT: /groupshare/ISP_results/complete_results/hand_forged_images/forged
+    dataroot_LQ: /groupshare/ISP_results/complete_results/hand_forged_images/mask # path to validation reference LR images, not necessary, if not provided, LR images will be generated in dataloader
+    dataroot_Predict: /groupshare/ISP_results/complete_results/hand_forged_images/predict
     GT_size: 512
 
 train:
