--- a/options/train/attack_layer_setting/IFA_attack_layer.yml
+++ b/options/train/attack_layer_setting/IFA_attack_layer.yml
@@ -1,6 +1,6 @@
 ### 已经使用过的indice： 5 7 8 9 10 11
-skip_attack_probability: 1.0
-skip_aug_probability: 1.0
+skip_attack_probability: 0.66
+skip_aug_probability: 0.66
 
 #### distortion-level 0: total 8
 simulated_resize_indices: [0,5]
@@ -24,23 +24,23 @@ simulated_inpainting_indices: [1, 4, 7]
 simulated_copysplicing_indices: []
 
 #### inpainting-level 1 (subject to manipulation): total 5
-zits_as_inpainting: [0,1,3]
+zits_as_inpainting: [3,4]
 edgeconnect_as_inpainting: []
-lama_as_inpainting: [2,4]
+lama_as_inpainting: [0,1,2]
 ideal_as_inpainting: []
 
 #### detector-level 0: total 11
-detector_using_MPF_indices: [2,5,8]
-detector_using_MVSS_indices: [0,3,6,9]
-detector_using_OSN_indices: [1,4,7,10]
+#detector_using_MPF_indices: [2,5,8]
+#detector_using_MVSS_indices: [0,3,6,9]
+#detector_using_OSN_indices: [1,4,7,10]
 
 #### crop-level 0: total 10
-crop_indices: [1,3,5,7,9]
+#crop_indices: [1,3,5,7,9]
 
-minimum_PSNR_caused_by_attack: 25
+minimum_PSNR_caused_by_attack: 28
 
 use_gamma_correction: false
-conduct_cropping: true
+conduct_cropping: false
 consider_robost: true
 include_isp_inference: true
 conduct_augmentation: true
@@ -57,8 +57,8 @@ model_save_period: 1000
 
 
 weak_JPEG_lower_bound: 20
-strong_JPEG_upper_bound: 19
-strong_JPEG_lower_bound: 10
+strong_JPEG_upper_bound: 20
+strong_JPEG_lower_bound: 14
 cropping_lower_bound: 0.7
 
 
