--- a/options/train/IFA/train_RR_IFA.yml
+++ b/options/train/IFA/train_RR_IFA.yml
@@ -1,14 +1,15 @@
 #### model path dirs
 predictor_folder: /groupshare/IFA_results/model/RR_IFA/
 
-load_predictor_models: 0
+load_predictor_models: 3_1999
+consider_mask_prediction: false
 
 #### general settings
 
-gpu_ids: [2,3]
+gpu_ids: [1,4]
 
 restart_step: 1000
-model_save_period: 5000
+model_save_period: 2000
 
 using_which_dataset_for_training: Raise #Canon_FiveK
 using_which_dataset_for_test: Raise
@@ -33,7 +34,7 @@ datasets:
     use_shuffle: true
     n_workers: 4 # per GPU
 
-    batch_size: 16 # 4
+    batch_size: 32 # 4
     GT_size: 512 # 608
 
     color: RGB
@@ -44,6 +45,7 @@ datasets:
     dataroot_GT: /groupshare/COCOdataset/val2017
     dataroot_LQ: ~ # path to validation reference LR images, not necessary, if not provided, LR images will be generated in dataloader
     GT_size: 512
+    batch_size: 64
 
 
 train:
